# truth-table-helper

./: bak.py  idk.py  pyproject.toml
src/: __init__.py  truth_table.py
